# hidapi

./: CMakeLists.txt
debian/: README.Debian  changelog  control  copyright  hidapi-doc.install  libhidapi-dev.install  libhidapi.install  package.sh
